...
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:background="@drawable/timer_background">

        <TextView
            android:id="@+id/timerTv"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:elevation="2dp"
            android:padding="10dp"
            android:text="10 Minutes Timer"
            android:fontFamily="@font/shockwave"
...
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@color/black">

    <TextView
            android:id="@+id/tx1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Study Session Group Chat"
            android:fontFamily="@font/oswald"
            android:textSize="18sp"
            android:textColor="@color/white"
...
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:background="@drawable/message_input_background">

    <EditText
            android:id="@+id/msgEdt"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:hint="Enter a message..."
            android:fontFamily="@font/caster"
            android:textSize="16sp"
            android:padding="10dp"
            android:elevation="2dp" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="Send"
            android:textSize="20sp"
            android:fontFamily="@font/gladifilthefte"
            android:padding="10dp"
...
