...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/history"
    tools:context=".EventsActivity">

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:text="Click to Enter Date and Time "
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
...
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fabAddEvent"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/shockwave"
        android:text="Add \nDetails"
        android:textColor="#ffffff"
...
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEvents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectedDate"
...
