...
            android:textSize="35dp"
            android:fontFamily="@font/gladifilthefte"
            android:textColor="#FBFBFB">
        </TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#63B4AC"
            android:textColor="#FBFBFB"
            android:fontFamily="@font/caster"
            android:hint="Enter Username Here">
...
            android:textSize="35dp"
            android:fontFamily="@font/gladifilthefte"
            android:textColor="#F8F5F5">
        </TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:background="#63B4AC"
            android:fontFamily="@font/caster"
            android:textColor="#FBFBFB"
...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/shockwave"
            android:text="Login"
            android:textColor="#ffffff"
...
